feat(soal): get soal and randomize
